Server crashes when the OCSP fetcher attempts to fetch during shutdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Security 2022-11-14
    • 117
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A segmentation fault occurs when the OCSP fetcher periodic job fires while mongod is shutting down. The null pointer dereferenced is the std::unique_ptr<OCSPManager> obtained from the global service context here. Oddly, this issue only manifested while running on a TSAN debug build.

       

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: