SERVER-70766 Server crashes when the OCSP fetcher attempts to fetch during shutdown